--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Shubhamoy Chakrabarty <me@shubhamoy.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "socket.io": "^1.7.3"
   }
 }
