Update license and repository link

--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "node.js"
   ],
   "author": "Shubhamoy Chakrabarty <me@shubhamoy.com>",
-  "license": "ISC",
-  "dependencies": {
+  "license": "Apache-2.0",
+  "repository" : {
+	  "type" : "git",
+		"url" : "https://github.com/shubhamoy/basic_docker_app.git"
+	},
+	"dependencies": {
     "express": "^4.15.2",
     "socket.io": "^1.7.3"
   }
